test/conformance/chainsaw/autogen/assert-autogen/check-autogen.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ($test.metadata.name)
status:
  autogen:
    rules:
    - match:
        any:
        - resources:
            kinds:
            - apps/v1/Deployment
      name: autogen-disallow-default-sa
      validate:
        message: default ServiceAccount should not be used
        assert:
          object:
            spec:
              template:
                spec:
                  (serviceAccountName == 'default'): false
    - match:
        any:
        - resources:
            kinds:
            - batch/v1/CronJob
      name: autogen-cronjob-disallow-default-sa
      validate:
        message: default ServiceAccount should not be used
        assert:
          object:
            spec:
              jobTemplate:
                spec:
                  template:
                    spec:
                      (serviceAccountName == 'default'): false
